--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,13 @@
-<div class="h-[90vh] mt-10 md:flex">
-
-    <div class="w-full h-[83vh]  hidden lg:block lg:w-1/2 bg-cover rounded-l-lg">
-        <div class="flex mt-5 items-center h-[10%] justify-center">
+<div class="h-[85vh] mt-10 md:flex">
+    <div class="w-full hidden  h-[85vh] relative  lg:block lg:w-1/2 bg-cover rounded-l-lg">
+        <div class="flex   h-1/4 absolute  left-1/3 top-[-12%] mt-2 items-center  justify-center">
             <img src="assets/images/Sama.png" alt="">
             <img src="assets/images/logogs1.png" alt="">
         </div>
-        <div class=" h-full" style="background-image: url('assets/images/graduation-amico.jpg')">
+        <div class="h-3/4 ">
+            <img src="assets/images/graduation-amico.jpg" alt="">
         </div>
     </div>
-
     <div class="flex md:w-1/2 justify-center  primarycolor items-center">
         <div class="flex flex-col w-full items-center  ">
             <div class=" flex flex-col items-center justify-center">
@@ -19,14 +18,14 @@
                     vos diplomes en toute sécurité
                 </div>
             </div>
-            <form action="" class="mb-0 mt-5 space-y-3 w-2/3 rounded-2xl p-4   bg-white shadow-lg sm:p-6 lg:p-8">
+            <form action="" class="mb-0 mt-5 space-y-3 w-2/3 rounded-2xl p-4   bg-white shadow-lg sm:p-6 lg:p-8"
+                [formGroup]="loginForm" (ngSubmit)="login()">
                 <div>
                     <label for="email" class="primarycolorText">Email</label>
                     <div class="relative">
-                        <input type="email"
+                        <input type="email" formControlName="email"
                             class="w-full rounded-lg border-2 border-orange-300 p-4 pe-12 text-sm shadow-sm"
                             placeholder="Entrer votre email" />
-
                         <span class="absolute inset-y-0 end-0 grid place-content-center px-4">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-gray-400" fill="none"
                                 viewBox="0 0 24 24" stroke="currentColor">
@@ -36,12 +35,11 @@
                         </span>
                     </div>
                 </div>
-
                 <div>
                     <label for="password" class="primarycolorText">Password</label>
 
                     <div class="relative">
-                        <input type="password"
+                        <input type="password" formControlName="password"
                             class="w-full rounded-lg  border-2 border-orange-300 p-4 pe-12 text-sm shadow-sm"
                             placeholder="Entrer votre mot de pass" />
 
@@ -61,9 +59,9 @@
                 </div>
                 <div class="flex items-center justify-center">
 
-                    <button type="submit"
+                    <button type="submit" [disabled]="loginForm.invalid"
                         class="block w-2/4  primarycolor rounded-lg  px-5 py-3 text-sm font-medium text-white">
-                        Sign in
+                        CONNEXION
                     </button>
                 </div>
 
